<resources>
    <string name="app_name">Task Manager</string>
    <string name="get_started">Get started 〉</string>
    <string name="to_do_list">To do list</string>
    <string name="you_can_make_your_to_do_list_for_every_day">You can make your to do list for every day</string>
    <string name="goals">Goals</string>
    <string name="you_can_set_and_achieve_goals">You can set and achieve goals</string>
    <string name="habits">Habits</string>
    <string name="you_can_acquire_new_habits">You can acquire new habits</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_without_sign_up">Sign in without sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="remember_me">remember me</string>
    <string name="you_have_no_tasks">You have no tasks</string>
    <string name="create_your_to_do_list">Сreate your to-do list</string>
    <string name="urgently">Urgently</string>
    <string name="important">Important</string>
    <string name="desirable">Desirable</string>
    <string name="add_new_task">Add new task +</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="from_08_00_am">from: <br />08:00 AM</string>
    <string name="from">from:</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="_13_00_pm">13:00 PM</string>
    <string name="to">to:</string>
    <string name="repeat">Repeat</string>
    <string name="sound">Sound</string>
    <string name="hold_over">Hold Over</string>
    <string name="happy">Happy</string>
    <string name="never">Never</string>
    <string name="name_error">Name error!</string>
    <string name="last_name_error">Last name error!</string>
    <string name="error_gmail_phone">Input error!</string>
    <string name="password_error">Password error!</string>
    <string name="facebook_app_id">ga0RGNYHvNM5d0SLGQfpQWAPGJ8=</string>
    <string name="fb_login_protocol_scheme">fb828389557653033</string>
    <string name="id">ID</string>
    <string name="add_new_list">Add new list +</string>
    <string name="go_to_the_next_task"><b>Go to the next Task</b>></string>
    <string name="task_manager">TASK MANAGER</string>
    <string name="go_to_the_next_task_2">Go to the next Task</string>


</resources>
